# django-markupfield

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  README.rst  dev-requirements.txt  fields.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py  tox.ini
.github/workflows/: test.yml
markupfield/: __init__.py  fields.py  markup.py  markuptest.db  widgets.py
markupfield/locale/de/LC_MESSAGES/: django.mo  django.po
markupfield/tests/: models.py  run_tests.sh  settings.py  tests.py
tests/: models.py  tests.py
